styles.css
html,body{
    background-color: black;
    /* height:100%; */
    font-family:  Helvetica, Arial,sans-serif;

}
.resume-container{
    background-color: white;
    height:1100px;
    width: 850px;
    max-width:850px;
    position:relative;
    margin-left:auto;
    margin-right:auto;
    padding-top: .5%;


}
.resume-header{
    background-color: rgb(242, 242, 242);
    height:15%;
    margin-top:4.0%;
    margin-left:2.5%;
    margin-right:2.5%;
    display:flex;
    flex-direction: column;
    justify-content: center;
    padding-left:10%;

}
.header-name{
    font-size:70px;
    font-family: 'Raleway', sans-serif;
    letter-spacing: .06em;

}
.header-firstname{
    font-weight:500;
}
.header-lastname{
    font-weight:900;
    text-shadow: 2px 0 black;
}
.header-role{
    font-size:14px;
    letter-spacing: .5em;
    font-family:'Lato',sans-serif;
    font-weight:100;
}
.header-text{
}
.linkedIn{
    width: 17%;
    position:absolute;
    border-radius: 50%;
    top:9%;
    right:11%;

}
.resume-body{
    display: flex;
    padding:5%;
    height:74%; 
}
.resume-body-left{
}
.resume-body-left-top{
    height:20%;
}
.resume-body-left-middle{
    height:20%;
}
.resume-body-left-bottom{
    height:20%;
}

